# joker-complier

./: .clang-tidy  .gitignore  CMakeLists.txt  joker.c
include/: allocator.h  bound_method.h  chunk.h  class.h  class_compiler.h  closure.h  common.h  compiler.h  console.h  debug.h  enum.h  enum_instance.h  error.h  fn.h  gc.h  hashmap.h  instance.h  memory.h  mod.h  native.h  object.h  op_cases.inc  op_labels.inc  operator.h  option.h  pair.h  parser.h  pool.h  repl.h  scanner.h  string_.h  struct_.h  symbol.h  token.h  type.h  type_register.h  upvalue.h  value.h  vec.h  vm.h
mermaid/: parse_compound_assign.mermaid  parser_add_local.mermaid  parser_add_upvalue.mermaid  parser_break.mermaid  parser_class.mermaid  parser_continue.mermaid  parser_declare_variable.mermaid  parser_define_variable.mermaid  parser_dot.mermaid  parser_emit_break.mermaid  parser_emit_continue.mermaid  parser_emit_jump.mermaid  parser_emit_loop.mermaid  parser_end_scope.mermaid  parser_fn.mermaid  parser_for.mermaid  parser_if.mermaid  parser_loop.mermaid  parser_match.mermaid  parser_method.mermaid  parser_patch_jump.mermaid  parser_precedence.mermaid  parser_resolve_local.mermaid  parser_resolve_upvalue.mermaid  parser_return.mermaid  parser_return_stmt.mermaid  parser_struct.mermaid  parser_struct_member.mermaid  parser_super.mermaid  parser_var.mermaid  parser_var_name.mermaid  parser_while.mermaid
src/: allocator.c  bound_method.c  chunk.c  class.c  class_compiler.c  closure.c  compiler.c  console.c  debug.c  enum.c  enum_instance.c  error.c  fn.c  gc.c  hashmap.c  instance.c  memory.c  mod.c  native.c  object.c  ops.c  option.c  pair.c  parser.c  pool.c  repl.c  scanner.c  string.c  struct_.c  token.c  type.c  type_register.c  upvalue.c  value.c  vec.c  vm.c
tests/dest/: test_add_op.jk  test_allocator.jk  test_array.jk  test_base_constant_and_operator.jk  test_benchmarking_call.jk  test_call.jk  test_class.jk  test_comment.jk  test_control.jk  test_enum.jk  test_fn_class_colsure.jk  test_function.jk  test_hashmap.jk  test_incr.jk  test_lambda.jk  test_loop.jk  test_match.jk  test_none.jk  test_option.jk  test_print.jk  test_println.jk  test_property.jk  test_result.jk  test_sort.jk  test_struct.jk  test_task.jk  (+4 more)
(+21 files in other folders)
